# screeps_bot

./: .gitignore  Cargo.toml
javascript/: hacks_ui.js  main.js
javascript/client/: hacks_ui.js  visualizer.js
src/: client_hacks.rs  colony.rs  inventory.rs  lib.rs  logging.rs  state.rs  stats.rs  task.rs  tasks.rs  util.rs  visualization.rs
src/colony/: inventory.rs  memory.rs  room.rs
src/tasks/: drop_harvest.rs  haul.rs
